Não precisa bloquear o produtor quando o buffer está cheio, apenas remove o pacote mais velho e insere o novo pacote.
Não precisa fazer o consumidor desbloquear ninguém quando terminar de consumir (notifyAll()) porque o produtor não bloqueia.